--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
         <img src="img/acceuil-background.jpg" alt="Logo Cocktail">
        
         <div class="text-acceuil">
-            <h1>BIENVENUE</h1>
+            <h1>BIENVENUES</h1>
             <p>Lorem ipsum dolor sit amet, consectsetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdietLorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdietLorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet</p>
             <a href="#découvrir" class="cta-button">Découvrir</a>
         </div>
