--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
+    <header>
+        <div id="menu-header">
+            <div class="logo">
+                <img src="img/logo-cocktail.avif" alt="Logo Cocktail">
+            </div>
+            <nav class="nav-links">
+                <a href="#histoire">Voici notre histoire</a>
+                <a href="#contact">Nous contacter</a>
+            </nav>
+        </div>
+    </header>
+    <main>
     <div class="formulaire__container">
         <form class="formulaire">
             <div class="flexColumn">
@@ -34,5 +47,6 @@
             <button class="formulaire__container__button" type="submit">Send</button>
         </form>
     </div>
+    </main>
 </body>
 </html>
