--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <header>
