--- a/galerie.html
+++ b/galerie.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>galerie</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="galerie.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
+    <header>
+        <div id="menu-header">
+            <div class="logo">
+                <img src="img/logo-cocktail.avif" alt="Logo Cocktail">
+            </div>
+            <nav class="nav-links">
+                <a href="#histoire">Voici notre histoire</a>
+                <a href="#contact">Nous contacter</a>
+            </nav>
+        </div>
+    </header>
     <main>
         <section class="section-container">
+            <a href="https://github.com/Smiil3/SiteVitrineB2/pull/3">
+                <div class="container-img">
+                    <p>Saluttt</p>
+                    <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
+                </div>
+            </a>
+            <div class="container-img-bis">
+                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
+            </div>
+            <div class="container-img">
+                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
+            </div>
+            <div class="container-img-bis">
+                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
+            </div>
+        </section>
+        <section class="section-container-bis">
             <div class="container-img">
                 <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
             </div>
