--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,9 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
             </div>
-            <button class="formulaire__container__button" type="submit">Send</button>
+            <div class="buttonContainer">
+                <button class="formulaire__container__button" type="submit">Send</button>
+            </div>
         </form>
     </div>
     </main>
