Refonte de la navbar, page contact almost done.

--- a/contact.html
+++ b/contact.html
@@ -7,48 +7,65 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lilita+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div id="menu-header">
-            <div class="logo">
-                <img src="img/logo-cocktail.avif" alt="Logo Cocktail">
+        <div class="navbar">
+            <div id="menu-header">
+                <div class="logo">
+                    <img src="img/contact/logo.png" alt="Logo Cocktail">
+                </div>
+                <nav class="nav-links">
+                    <a class="button" href="header.html/#histoire">HISTOIRE</a>
+                    <a class="button" href="galerie.html">CARTE</a>
+                    <a class="cta" href="contact.html">CONTACT</a>
+                </nav>
             </div>
-            <nav class="nav-links">
-                <a href="#histoire">Voici notre histoire</a>
-                <a href="#contact">Nous contacter</a>
-            </nav>
         </div>
     </header>
     <main>
-    <div class="formulaire__container">
-        <form class="formulaire">
-            <div class="flexColumn">
-                <label for="object">Objet:</label>
-                <input type="text" id="object" name="object" required>
-            </div>
-            <div class="nameFirstnameContainer">
-                <div class="flexColumn fiftyInput">
-                    <label for="name">Nom:</label>
-                    <input type="text" id="name" name="name" required>
+    <div class="formulaire__container"> 
+        <div class="formulaire__bottom">
+            <img src="img/contact/cocktails3.png">
+            <form class="formulaire">
+                <div class="formulaire__info">
+                    <h1 class="contactTitle">Contactez Nous</h1>
+                    <p class="paragrapheTitle">Vous avez une question, une suggestion ou une demande particulière ?</p>
+                    <p class="paragrapheTitle">N'hésitez pas à nous contacter en remplissant le formulaire ci-dessous.</p>
+                    <p class="paragrapheTitle">Nous vous répondrons dans les plus brefs délais.</p>
                 </div>
-                <div class="flexColumn fiftyInput">
-                    <label for="firstname">Prénom:</label>
-                    <input type="text" id="firstname" name="firstname" required>
+                <div class="flexColumn">
+                    <label for="object">Objet:</label>
+                    <input type="text" id="object" name="object" required>
                 </div>
-            </div>
-            <div class="flexColumn">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="flexColumn">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <div class="buttonContainer">
-                <button class="formulaire__container__button" type="submit">Send</button>
-            </div>
-        </form>
+                <div class="nameFirstnameContainer">
+                    <div class="flexColumn fiftyInput">
+                        <label for="name">Nom:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="flexColumn fiftyInput">
+                        <label for="firstname">Prénom:</label>
+                        <input type="text" id="firstname" name="firstname" required>
+                    </div>
+                </div>
+                <div class="flexColumn">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="flexColumn">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <div class="buttonContainer">
+                    <button class="formulaire__container__button" type="submit">ENVOYER</button>
+                </div>
+            </form>
+            <img src="img/contact/cocktails4.png">
+        </div>
     </div>
     </main>
 </body>
