--- a/galerie.html
+++ b/galerie.html
@@ -10,14 +10,17 @@
 </head>
 <body>
     <header>
-        <div id="menu-header">
-            <div class="logo">
-                <img src="img/logo-cocktail.avif" alt="Logo Cocktail">
+        <div class="navbar">
+            <div id="menu-header">
+                <div class="logo">
+                    <img src="img/contact/logo.png" alt="Logo Cocktail">
+                </div>
+                <nav class="nav-links">
+                    <a class="button" href="header.html/#histoire">HISTOIRE</a>
+                    <a class="button" href="galerie.html">CARTE</a>
+                    <a class="cta" href="contact.html">CONTACT</a>
+                </nav>
             </div>
-            <nav class="nav-links">
-                <a href="#histoire">Voici notre histoire</a>
-                <a href="#contact">Nous contacter</a>
-            </nav>
         </div>
     </header>
     <main>
