Création de la page item, html et css finis.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                     <img src="img/contact/logo.png" alt="Logo Cocktail">
                 </div>
                 <nav class="nav-links">
-                    <a class="button" href="header.html/#histoire">HISTOIRE</a>
+                    <a class="button" href="header.html#histoire">HISTOIRE</a>
                     <a class="button" href="galerie.html">CARTE</a>
                     <a class="cta" href="contact.html">CONTACT</a>
                 </nav>
