--- a/galerie.html
+++ b/galerie.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="galerie.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lilita+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,36 +28,61 @@
         </div>
     </header>
     <main>
+        <div class="container-titre">
+            <h1>Nos recettes de cocktails</h1>
+            <p>Bienvenue à la Galerie des Cocktails, l’endroit parfait pour des idées de boissons originales et pleines de caractère. Ici, on fait de chaque cocktail une petite aventure, avec des mélanges surprenants, des ingrédients frais, et une touche de créativité. Que tu sois fan des grands classiques ou que tu aimes tester de nouvelles saveurs, notre carte te réserve des surprises. Nos barmans sont là pour te conseiller et te préparer des cocktails qui te feront voyager. Alors, installe-toi, détends-toi et laisse-toi emporter par nos créations dans une ambiance décontractée et chaleureuse !</p>
+        </div>
         <section class="section-container">
-            <a href="https://github.com/Smiil3/SiteVitrineB2/pull/3">
+            <a href="item.html">
                 <div class="container-img">
-                    <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-                    <p>Saluttt</p>
+                    <img src="img/cocktail/TequilaSunriseShots.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Tequila Sunrise</p>
                 </div>
             </a>
-            <div class="container-img-bis">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
-            <div class="container-img">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
-            <div class="container-img-bis">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
+            <a href="item.html">
+                <div class="container-img-bis">
+                    <img src="img/cocktail/SunsetMartini.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Sunset Martini</p>
+                </div>
+            </a>
+            <a href="item.html">
+                <div class="container-img">
+                    <img src="img/cocktail/LemonDelight.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Lemon Delight</p>
+                </div>
+            </a>
+            <a href="item.html">
+                <div class="container-img-bis">
+                    <img src="img/cocktail/MargaritaGlacee.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Margarita Glacée</p>
+                </div>
+            </a>
         </section>
         <section class="section-container-bis">
-            <div class="container-img">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
-            <div class="container-img-bis">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
-            <div class="container-img">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
-            <div class="container-img-bis">
-                <img src="img/tropical.jpg" alt="cocktail glouglou" class="img-cocktail">
-            </div>
+            <a href="item.html">
+                <div class="container-img">
+                    <img src="img/cocktail/NegroniSoleil.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Negroni Soleil</p>
+                </div>
+            </a>
+            <a href="item.html">
+                <div class="container-img-bis">
+                    <img src="img/cocktail/Rougedete.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Rouge d'été</p>
+                </div>
+            </a>
+            <a href="item.html">
+                <div class="container-img">
+                    <img src="img/cocktail/SummerBreeze.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">Summer Breeze</p>
+                </div>
+            </a>
+            <a href="item.html">
+                <div class="container-img-bis">
+                    <img src="img/cocktail/CitrusBliss.jpg" alt="cocktail glouglou" class="img-cocktail">
+                    <p class="p">CitrusBliss</p>
+                </div>
+            </a>
         </section>
     </main>
 </body>
