Js done for item page.

--- a/item.html
+++ b/item.html
@@ -32,28 +32,24 @@
             <div>
                 <a href="galerie.html" class="backArrow">⬅</a>
                 <div class="image__container">
-                    <img src="img/cocktails/CitrusBliss.jpg">
+                    <img class="cocktailImg" alt="Image Cocktail" src="">
                 </div>
             </div>
             <div class="text__container">
-                <h1 class="itemTitle">Citrus Bliss</h1>
+                <h1 class="itemTitle">Loading..</h1>
 
                 <div class="description__container">
                     <h2 class="itemSubtitle">Description</h2>
-                    <p class="itemParagraph">Le Citrus Bliss est un cocktail rafraîchissant et vibrant, idéal pour les amateurs de saveurs citronnées. Avec sa couleur jaune éclatante et sa garniture de tranche de citron, il est parfait pour apporter une touche de soleil à votre journée.</p>
+                    <p class="itemParagraph">Loading..</p>
                     <br>
                     <h2 class="itemSubtitle">Ingrédients</h2>
                     <ul>
-                        <li>60 ml de vodka</li>
-                        <li>30 ml de jus de citron frais</li>
-                        <li>15 ml de sirop de sucre</li>
-                        <li>Glaçons</li>
-                        <li>Tranche de citron pour la décoration</li>
                     </ul>
                 </div>
                 <button class="back">RETOUR À LA CARTE</button>
             </div>
         </div>
     </main>
+    <script src="item.js"></script>
 </body>
 </html>
