--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,21 @@
                     <a class="button" href="galerie.html">CARTE</a>
                     <a class="cta" href="contact.html">CONTACT</a>
                 </nav>
+                <div class="menu-icon">
+                    <img class="iconburger" src="img/menu.png" alt="Logo Menu">
+                </div>
             </div>
         </div>
     </header>
+    <div class="nav--phone hidden_phone">
+            <a class="button-phone" href="header.html#histoire">HISTOIRE</a>
+            <a class="button-phone" href="galerie.html">CARTE</a>
+            <a class="cta-phone" href="contact.html">CONTACT</a>
+    </div>
     <main>
     <div class="formulaire__container"> 
         <div class="formulaire__bottom">
-            <img src="img/contact/cocktails3.png">
+            <img class="img1" src="img/contact/cocktails3.png">
             <form class="formulaire">
                 <div class="formulaire__info">
                     <h1 class="contactTitle">Contactez Nous</h1>
@@ -64,9 +72,10 @@
                     <button class="formulaire__container__button" type="submit">ENVOYER</button>
                 </div>
             </form>
-            <img src="img/contact/cocktails4.png">
+            <img class="img2" src="img/contact/cocktails4.png">
         </div>
     </div>
     </main>
+    <script src="header.js"></script>
 </body>
 </html>
