--- a/galerie.html
+++ b/galerie.html
@@ -30,7 +30,7 @@
     <main>
         <div class="container-titre">
             <h1>Nos recettes de cocktails</h1>
-            <p>Bienvenue à la Galerie des Cocktails, l’endroit parfait pour des idées de boissons originales et pleines de caractère. Ici, on fait de chaque cocktail une petite aventure, avec des mélanges surprenants, des ingrédients frais, et une touche de créativité. Que tu sois fan des grands classiques ou que tu aimes tester de nouvelles saveurs, notre carte te réserve des surprises. Nos barmans sont là pour te conseiller et te préparer des cocktails qui te feront voyager. Alors, installe-toi, détends-toi et laisse-toi emporter par nos créations dans une ambiance décontractée et chaleureuse !</p>
+            <p>Bienvenue à la Galerie des Cocktails, l’endroit parfait pour des idées de boissons originales et pleines de caractère. <br><br>Ici, on fait de chaque cocktail une petite aventure, avec des mélanges surprenants, des ingrédients frais, et une touche de créativité. Que tu sois fan des grands classiques ou que tu aimes tester de nouvelles saveurs, notre carte te réserve des surprises. Nos barmans sont là pour te conseiller et te préparer des cocktails qui te feront voyager.<br><br> Alors, installe-toi, détends-toi et laisse-toi emporter par nos créations dans une ambiance décontractée et chaleureuse !</p>
         </div>
         <section class="section-container">
             <a href="item.html?cocktail=tequilasunriseshots">
@@ -80,10 +80,32 @@
             <a href="item.html?cocktail=citrusbliss">
                 <div class="container-img-bis">
                     <img src="img/cocktail/CitrusBliss.jpg" alt="cocktail glouglou" class="img-cocktail">
-                    <p class="p">CitrusBliss</p>
+                    <p class="p">Citrus Bliss</p>
                 </div>
             </a>
         </section>
     </main>
+    <footer>
+        <div class="footer">
+            <section class="section-container-footer">
+                <div class="container-social">
+
+                </div>
+                <div class="container-footer">
+                    <a href="mentions.html">Mentions légales</a>
+                    <a href="mentions.html">Politique de confidentialité</a>
+                    <a href="mentions.html">Cookies</a>
+
+
+                </div>
+                <div class="container-cta"> 
+                    <a class="cta" href="contact.html">CONTACT</a>
+                </div>
+                <div class="container-made">
+                    <p>Concocté avec 🧡 par <a href="https://linktr.ee/TicketResto">Ticket Resto</a></p>
+                </div>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
