--- a/header.html
+++ b/header.html
@@ -17,15 +17,18 @@
 
 <body>
     <header>
-        <div id="menu-header">
-            <div class="logo">
-                <img src="img/CocktailGlouglou-Logo.png" alt="Logo Cocktail">
+        <div class="navbar">
+            <div id="menu-header">
+                <div class="logo">
+                    <img src="img/contact/logo.png" alt="Logo Cocktail">
+                </div>
+                <p>COCKTAIL GLOUGLOU</p>
+                <nav class="nav-links">
+                    <a class="button" href="header.html#histoire">HISTOIRE</a>
+                    <a class="button" href="galerie.html">CARTE</a>
+                    <a class="cta" href="contact.html">CONTACT</a>
+                </nav>
             </div>
-            <p class="nav-title">Cocktail GlouGlou</p> <!-- Nouveau paragraphe ajouté ici -->
-            <nav class="nav-links">
-                <a href="#histoire">Voici notre histoire</a>
-                <a href="#contact">Nous contacter</a>
-            </nav>
         </div>
     </header>
 
@@ -33,91 +36,108 @@
         <img src="img/acceuil-background.jpg" alt="Fond d'accueil">
         <div class="text-acceuil">
             <h1>BIENVENUE SUR COCKTAIL GLOUGLOU</h1>
-            <p>Depuis 2024, Cocktail GlouGlou répertorie les meilleurs cocktails exotiques pour les fins gourmets et les amoureux de moments ensoleillés. Notre site vitrine est dédié à ceux qui souhaitent savourer l’évasion à chaque gorgée, en découvrant des cocktails aux saveurs tropicales et aux horizons exotiques.</p>
-            <a href="#découvrir" class="cta-button">Découvrir</a>
+            <p>Depuis 2024, Cocktail GlouGlou présente les meilleurs cocktails exotiques pour les amateurs de moments ensoleillés. Notre site est dédié à ceux qui souhaitent savourer l’évasion à chaque gorgée avec des saveurs tropicales et des horizons lointains.</p>
+            <a href="#découvrir" class="cta">DÉCOUVRIR</a>
         </div>
     </div>
 
-<!-- Section Cocktail 1 -->
-<section class="cocktail-section">
-    <div class="cocktail-content">
-        <div class="cocktail-image">
-            <img src="img/pinacolada.jpg" alt="Pina Colada">
+    <!-- Section des nouveautés -->
+    <section class="nouveautes-section">
+        <h2>LES NOUVEAUTÉS DE COCKTAIL GLOUGLOU !</h2>
+        <div class="nouveautes-content">
+            <!-- Cocktail 1 -->
+            <div class="cocktail-item">
+                <div class="cocktail-image">
+                    <img src="img/CitrusBliss.jpg" alt="Citrus Bliss">
+                </div>
+                <div class="cocktail-text">
+                    <h3>CITRUS BLISS</h3>
+                    <p> 
+                    Imaginez-vous en train de savourer un Citrus Bliss, un cocktail vibrant aux couleurs éclatantes.
+                    </p>
+                      <br>                    
+                         <a href="#découvrir" class="cta">DÉCOUVRIR</a>
+                      <br> 
+                </div>
+            </div>
+
+            <!-- Cocktail 2 -->
+            <div class="cocktail-item">
+                <div class="cocktail-image">
+                    <img src="img/Rougedete.jpg" alt="ROUGE D'ÉTÉ">
+                </div>
+                <div class="cocktail-text">
+                    <h3>ROUGE D'ÉTÉ</h3>
+                    <p>
+                        Un cocktail rafraîchissant aux notes fruitées et légèrement amères.
+                    </p>
+                    <br>                    
+                    <a href="#découvrir" class="cta">EN SAVOIR PLUS</a>
+                 <br> 
+                </div>
+            </div>
+
+            <!-- Cocktail 3 -->
+            <div class="cocktail-item">
+                <div class="cocktail-image">
+                    <img src="img/SummerBreeze.jpg" alt="Summer Breeze">
+                </div>
+                <div class="cocktail-text">
+                    <h3>SUMMER BREEZE</h3>
+                    <p>           
+                        Avec ses teintes légères et rafraîchissantes le Summer Breeze vous transporte vers des journées ensoleillées.
+                    </p>
+                    <br>                    
+                    <a href="#découvrir" class="cta">EN SAVOIR PLUS</a>
+                 <br> 
+                </div>
+            </div>
+
+            <!-- Cocktail 4 -->
+            <div class="cocktail-item">
+                <div class="cocktail-image">
+                    <img src="img/tequila-sunrise.jpeg" alt="Tequila Sunrise Shots">
+                </div>
+                <div class="cocktail-text">
+                    <h3>TEQUILA SUNRISE SHOTS</h3>
+                    <p>
+                        Bien plus qu'un simple shot, le Tequila Sunrise est une expérience visuelle et gustative.
+                    </p>
+                    <br>                    
+                    <a href="#découvrir" class="cta">EN SAVOIR PLUS</a>
+                 <br> 
+                </div>
+            </div>
         </div>
-        <div class="cocktail-text">
-            <h2>PIÑA COLADA - L’évasion tropicale par excellence</h2>
-            <p>
-                Imaginez-vous sirotant une délicieuse <strong>Piña Colada</strong> au bord d'une plage de sable fin, 
-                <span>les pieds enfouis dans le sable chaud, avec pour seule compagnie une brise douce et le doux murmure des vagues qui caressent le rivage.</span>
-                <span>Cette boisson emblématique, réalisée avec du <strong>rhum blanc</strong>, de la <strong>crème de coco</strong> et un <strong>jus d'ananas frais</strong>, ne se contente pas de rafraîchir ; elle est une véritable invitation au paradis.</span>
-                <span>Avec un zeste de <strong>citron vert pressé</strong> et une touche de <strong>vanille</strong>, chaque gorgée émerveille vos papilles gustatives, révélant des notes sucrées et acidulées qui dansent sur votre langue.</span>
-                <span>Garnie d'une tranche d'<strong>ananas juteux</strong> et d'une <strong>cerise confite</strong>, cette explosion de saveurs tropicales évoque des souvenirs de vacances ensoleillées et de moments de pure détente.</span>
-                <span>Laissez-vous transporter par cette évasion gustative irrésistible, qui promet d’éveiller vos sens et d’apporter une touche de magie à vos soirées d’été.</span>
-            </p>
+    </section>
+
+<!-- Article Margarita Glacé et Sunset Martini -->
+<section class="article-cocktails">
+    <div class="article-cocktails-content">
+        <h1>Margarita Glacé et Sunset Martini : Présence dans le monde du cinéma</h1>
+
+        <p>Les cocktails ne sont pas seulement des boissons, ils sont aussi un moyen de s’évader et de créer des émotions. Certains d’entre eux ont le pouvoir de nous transporter vers des destinations exotiques ou de nous plonger dans une ambiance élégante et sophistiquée. C’est exactement ce que font le Margarita glacé et le Sunset Martini, deux cocktails qui ont su marquer la pop culture et ajouter du peps à de nombreuses scènes de films.</p>
+
+        <h2>L'IMPACT DES COCKTAILS DANS NOTRE QUOTIDIEN</h2>
+        <div class="cocktail-article-block">
+            <img src="img/MargaritaGlacee.jpg" alt="Margarita Glacé" class="cocktail-article-image">
+            <p>Le Margarita glacé est l’un de ces cocktails incontournables qui donnent instantanément l’impression d’être en vacances.</p>
+            <p>On le retrouve dans de nombreuses scènes de comédies romantiques ou de films de vacances, où la Margarita glacée devient synonyme de fun et de lâcher prise. Si vous avez déjà vu des films comme <em>The Proposal</em> ou <em>Sex and the City</em>, vous avez sûrement remarqué ces moments où les personnages trinquent avec une Margarita à la main, souvent autour d'une piscine ou sur une plage tropicale. La simple présence de ce cocktail rafraîchissant suffit à installer une ambiance estivale et détendue.</p>
+            
+            <p><strong>Envie de le tester ?</strong> La recette est ultra simple : de la tequila, du triple sec, du jus de citron vert, un peu de sirop d’agave, et le tout passé au blender avec de la glace. Servez-le dans un verre givré au sel, et c’est parti pour un voyage gustatif sous les tropiques !</p>
+        </div>
+
+        <h2>Le Sunset Martini : Élégance et Sophistication</h2>
+        <div class="cocktail-article-block">
+            <img src="img/SunsetMartini.jpg" alt="Sunset Martini" class="cocktail-article-image">
+            <p>De l’autre côté du spectre, on retrouve le Sunset Martini, un cocktail plus chic et élégant, parfait pour des moments de calme et de contemplation. Là où le Margarita glacé est synonyme de fête, le Sunset Martini nous plonge dans une ambiance de coucher de soleil sur une terrasse avec vue sur l’océan.</p>
+            
+            <p>Dans les films, le Sunset Martini est souvent associé à des scènes de transition ou de réflexion, où le personnage prend un moment pour lui, face à un coucher de soleil, un instant de calme après la tempête. Ses teintes orangées rappellent justement les couleurs du crépuscule, créant une atmosphère douce et apaisante.</p>
+
+            <p><strong>Envie de le préparer ?</strong> C’est tout aussi simple que le Margarita ! Il vous suffit de mélanger de la vodka, du jus de pamplemousse, un peu de grenadine pour obtenir ces superbes nuances de coucher de soleil, et quelques glaçons. Servi dans un verre à martini, ce cocktail est aussi beau à regarder qu’à déguster.</p>
         </div>
     </div>
 </section>
-
-<!-- Section Cocktail 2 -->
-<section class="cocktail-section">
-    <div class="cocktail-content">
-        <div class="cocktail-text">
-            <h2>MOJITO - Un souffle de fraîcheur venue de La Havane</h2>
-            <p>
-                Si l’on devait capturer la fraîcheur d’une soirée d’été à La Havane en un seul cocktail, ce serait sans conteste le <strong>Mojito</strong>.
-                <span>Avec son mélange rafraîchissant de <strong>rhum blanc</strong>, de <strong>menthe fraîche</strong>, de <strong>sucre de canne</strong>, et de <strong>jus de citron vert</strong>, ce classique cubain attire instantanément l'œil.</span>
-                <span>Servi dans un verre haut, le Mojito est souvent surmonté de quelques gouttes de rosée, évoquant une fraîcheur irrésistible.</span>
-                <span>À chaque gorgée, l'intensité des feuilles de <strong>menthe</strong> libérées, mariée à la douceur du <strong>sucre</strong> et à l'acidité du <strong>citron</strong>, vous transporte dans un jardin luxuriant en plein cœur de l’été.</span>
-                <span>Ajoutez quelques rondelles de <strong>citron vert</strong> et une <strong>paille colorée</strong>, et vous aurez un cocktail qui, à lui seul, évoque les soirées animées et les rires partagés.</span>
-                <span>Laissez-vous séduire par cette symphonie de saveurs, parfaite pour étancher votre soif tout en élevant vos papilles vers des cimes insoupçonnées.</span>
-            </p>
-        </div>
-        <div class="cocktail-image">
-            <img src="img/mojito.jpg" alt="Mojito">
-        </div>
-    </div>
-</section>
-
-<!-- Section Cocktail 3 -->
-<section class="cocktail-section">
-    <div class="cocktail-content">
-        <div class="cocktail-image">
-            <img src="img/maitai.webp" alt="Mai Tai">
-        </div>
-        <div class="cocktail-text">
-            <h2>Mai Tai – Un trésor caché des îles</h2>
-            <p>
-                Imaginez-vous sirotant un <strong>Mai Tai</strong> au bord d'une plage, les pieds dans le sable, avec pour seule compagnie une brise chaude et apaisante.
-                <span> Ce cocktail exotique, avec sa couleur dorée éclatante, est un véritable trésor des îles, mariant <strong>rhum blanc</strong> et <strong>rhum ambré</strong>, tout en étant rehaussé par un soupçon <strong>d'orange</strong> et <strong>d'orgeat</strong>.</span>
-                <span> Son parfum envoûtant vous transporte immédiatement vers des rivages lointains.</span>
-                <span> Avec un twist de <strong>citron vert</strong> fraîchement pressé et une touche de <strong>grenadine</strong>, chaque gorgée offre un équilibre parfait entre douceur et acidité.</span>
-                <span> Décoré d'une tranche <strong>d'orange</strong> et d'une <strong>cerise confite</strong>, ce cocktail est une explosion de couleurs et de saveurs qui éveillera vos sens.</span>
-                <span>Laissez-vous enivrer par cette expérience gustative, où chaque gorgée vous rappelle que l'évasion est à portée de main, et où le plaisir est un art de vivre.</span>
-            </p>
-        </div>
-    </div>
-</section>
-
-<!-- Section Cocktail 4 -->
-<section class="cocktail-section">
-    <div class="cocktail-content">
-        <div class="cocktail-text">
-            <h2>Tequila Sunrise – Le lever de soleil enivrant</h2>
-            <p>
-                Le <strong>Tequila Sunrise</strong> n’est pas qu’un simple cocktail, c’est un véritable spectacle pour les sens. 
-                <span>Avec ses couleurs vibrantes qui évoquent les premiers rayons d’un <strong>lever de soleil</strong> tropical, il capture à merveille la magie des matins paisibles d’été.</span>
-                <span>Composé de <strong>tequila</strong>, de <strong>jus d'orange frais</strong> et d'un soupçon de <strong>grenadine</strong>, il dévoile des teintes orange et rouge qui se mélangent délicatement dans le verre.</span>
-                <span>Chaque gorgée est une danse envoûtante de saveurs : l’agrume acidulé se mêle à la douceur sucrée de la <strong>grenadine</strong>, éveillant vos papilles et vous transportant vers des plages ensoleillées.</span>
-                <span>Pour sublimer ce délice, ajoutez une rondelle <strong>d'orange</strong> et une <strong>cerise confite</strong> en décoration.</span>
-                <span>Préparez-vous à savourer ce moment de pur bonheur, où chaque gorgée évoque l'insouciance des vacances et le plaisir d’un été éternel.</span>
-            </p>
-        </div>
-        <div class="cocktail-image">
-            <img src="img/tequila-sunrise.jpg" alt="Tequila Sunrise">
-        </div>
-    </div>
-</section>
-
 
 </body>
 </html>
