--- a/item.html
+++ b/item.html
@@ -72,6 +72,28 @@
         </div>
     </div>
     </main>
+    <footer>
+        <div class="footer">
+            <section class="section-container-footer">
+                <div class="container-social">
+
+                </div>
+                <div class="container-footer">
+                    <a href="mentions.html">Mentions légales</a>
+                    <a href="mentions.html">Politique de confidentialité</a>
+                    <a href="mentions.html">Cookies</a>
+
+
+                </div>
+                <div class="container-cta"> 
+                    <a class="cta" href="contact.html">CONTACT</a>
+                </div>
+                <div class="container-made">
+                    <p>Concocté avec 🧡 par <a href="https://linktr.ee/TicketResto">Ticket Resto</a></p>
+                </div>
+            </section>
+        </div>
+    </footer>
     <script src="item.js"></script>
     <script src="header.js"></script>
 </body>
