--- a/mentions.html
+++ b/mentions.html
@@ -20,13 +20,21 @@
                     <img src="img/contact/logo.png" alt="Logo Cocktail">
                 </div>
                 <nav class="nav-links">
-                    <a class="button" href="header.html/#histoire">HISTOIRE</a>
+                    <a class="button" href="header.html#histoire">HISTOIRE</a>
                     <a class="button" href="galerie.html">CARTE</a>
                     <a class="cta" href="contact.html">CONTACT</a>
                 </nav>
+                <div class="menu-icon">
+                    <img class="iconburger" src="img/menu.png" alt="Logo Menu">
+                </div>
             </div>
         </div>
     </header>
+    <div class="nav--phone hidden_phone">
+            <a class="button-phone" href="header.html#histoire">HISTOIRE</a>
+            <a class="button-phone" href="galerie.html">CARTE</a>
+            <a class="cta-phone" href="contact.html">CONTACT</a>
+    </div>
 
     <main>
         
@@ -100,5 +108,9 @@
             </section>
         </div>
     </footer>
+
+    
+    <script src="header.js"></script>
+
 </body>
 </html>
