--- a/galerie.html
+++ b/galerie.html
@@ -17,7 +17,7 @@
         <div class="navbar">
             <div id="menu-header">
                 <div class="logo">
-                    <img src="img/contact/logo.png" alt="Logo Cocktail">
+                    <a href="header.html"><img src="img/contact/logo.png" alt="Logo Cocktail"></a>
                 </div>
                 <nav class="nav-links">
                     <a class="button" href="header.html#histoire">HISTOIRE</a>
