--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cocktail - Site vitrine</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="header.css">
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="assets/sass/header.css">
+    <link rel="stylesheet" type="text/css" href="assets/sass/footer.css">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,6 +50,7 @@
         </div>
     </div>
 
+    <!-- Lamanne work: (not working) -->
     <!-- Section des nouveautés -->
     <section class="nouveautes-section">
         <h2>LES NOUVEAUTÉS DE COCKTAIL GLOUGLOU !</h2>
