--- a/galerie.html
+++ b/galerie.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>galerie</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="galerie.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="assets/sass/header.css">
+    <link rel="stylesheet" href="assets/sass/galerie.css">
+    <link rel="stylesheet" href="assets/sass/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lilita+One&display=swap" rel="stylesheet">
